updated styles and functionality

--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -20,9 +20,8 @@
   @include button($background-color: red);
 }
 
-.btn--glyphicon{
-    @include button($background-color: white);
+.btn--list{
+    @include button($background-color: green);
     float: right;
     border: none;
-    padding: 0;
 }
