--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -5,7 +5,8 @@ body {
 
 .wrapper {
   min-height: 100vh;
-  width: 100%;
+  max-width: 100vw;
+  width: 100vw;
   display: flex;
   flex-direction: column;
 }
@@ -14,15 +15,19 @@ body {
   display: flex;
   flex-grow: 1;
   justify-content: center;
+  max-width: inherit;
 }
 
 .ie-fixMinHeight {
   display: flex;
 }
 
-// .no-padding{
-  // padding: 0 !important;
-// }
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin:0 1em 0 1em;
+}
 
 .no-decoration {
   text-decoration: none !important;
@@ -30,3 +35,8 @@ body {
   color: white;
 }
 
+.content__form{
+  display: flex;
+  flex-direction: row;
+  justify-content:  center;
+}
