--- a/src/styles/_list.scss
+++ b/src/styles/_list.scss
@@ -1,4 +1,31 @@
-.list{
+.content__list{
+    width: 30vw;
     list-style: none;
+    display: flex;
+    flex-direction: column;
     padding: 0;
 }
+
+.content__item{
+    position: relative;
+    word-wrap: break-word;
+    margin-bottom: 5px;
+    border-bottom: 1px solid $color-primary;
+}
+
+.content__item.true{
+    background-color: limegreen;
+}
+
+
+// .content__item .btn--list{
+//     z-index: 1;
+//     position: absolute;
+//     right: 0;
+//     top: -5px;
+//     opacity: 0;
+// }
+
+// .content__item .btn--list:hover{
+//     opacity: 1;
+// }
