--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,6 @@
+@import "_colors.scss";
 @import "_common.scss";
 @import "_button.scss";
 @import "_header.scss";
+@import "_footer.scss";
 @import "_list.scss";
