--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -1,4 +1,4 @@
-@mixin button($background-color) {
+@mixin baseButton($background-color) {
   $darkened-color: darken($background-color, 10%);
   background-color: $background-color;
   border: 1px solid $darkened-color;
@@ -9,19 +9,11 @@
     }
   }
 }
+
+// TODO sassy refactor
 .btn {
-  @include button($background-color: white);
+  @include baseButton($background-color: white);
   border-radius: 3px;
   padding: 3px 10px 3px 10px;
   outline: none;
-}
-
-.btn--danger {
-  @include button($background-color: red);
-}
-
-.btn--list{
-    @include button($background-color: green);
-    float: right;
-    border: none;
 }
