--- a/src/styles/_list.scss
+++ b/src/styles/_list.scss
@@ -1,31 +1,38 @@
-.content__list{
-    width: 30vw;
+.content {
+  &__list {
+    width: 80vw;
     list-style: none;
     display: flex;
     flex-direction: column;
     padding: 0;
-}
-
-.content__item{
+  }
+  &__item {
+    cursor: pointer;
     position: relative;
     word-wrap: break-word;
     margin-bottom: 5px;
     border-bottom: 1px solid $color-primary;
+    &.true {
+      // todo remove
+      border-bottom: 1px solid limegreen;
+    }
+    &--delete {
+      background-color: #ff9c9c;
+    }
+    &--complete {
+      background-color: greenyellow;
+    }
+    &:hover > .content__options{
+        opacity: 1;
+        z-index: 1;
+    }
+  }
+  &__options {
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    & > span {
+      padding: 0 5px 0 5px;
+    }
+  }
 }
-
-.content__item.true{
-    background-color: limegreen;
-}
-
-
-// .content__item .btn--list{
-//     z-index: 1;
-//     position: absolute;
-//     right: 0;
-//     top: -5px;
-//     opacity: 0;
-// }
-
-// .content__item .btn--list:hover{
-//     opacity: 1;
-// }
