--- a/src/styles/_list.scss
+++ b/src/styles/_list.scss
@@ -8,33 +8,33 @@
   }
   &__item {
     cursor: pointer;
-    align-items: flex-end;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    text-transform: capitalize;
     margin-bottom: 5px;
     border-bottom: 1px solid $color-primary;
+    
+    span:nth-child(2) {
+      float: right;
+    }
+
     &.true {
-      // todo remove
-    //   text-decoration: line-through;     
+      //  todo rework naming here (true?)
+      text-decoration: line-through;
       border-bottom: 1px solid limegreen;
     }
-    &--delete {
-      background-color: #ff9c9c;
-    }
-    &--complete {
-      background-color: greenyellow;
-    }
-    &:hover > .content__options {
-      opacity: 1;
-      z-index: 1;
+  }
+  &__header {
+    cursor: default;
+    text-transform: capitalize;
+    margin-bottom: 5px;
+    border-bottom: 3px solid darken($color-primary, 30%);
+    
+    span:nth-child(2) {
+      float: right;
     }
   }
-  &__options {
-    flex: 0 0 auto;
-    opacity: 0;
-    & > span {
-      padding: 0 5px 0 5px;
-    }
-  }
+}
+//  todo remake
+.placeholder{
+  position: absolute;
+  right: 85px;
 }
