--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -15,5 +15,6 @@
   @include baseButton($background-color: white);
   border-radius: 3px;
   padding: 3px 10px 3px 10px;
+  margin: 3px 10px 3px 10px;
   outline: none;
 }
